# stingray

./: CMakeLists.txt  FindGTK2.cmake  LICENSE  Makefile  README  client.c  gui.conf  gui.geany  joydrive.conf  joydrive.geany  labjackd.conf  labjackd.geany  makefile  messages.c  nav.conf  nav.geany  network.c  permissionsShutdown  planner.conf  planner.geany  server.c  startStingray  visiond.conf  visiond.geany
common/: messages.c  network.c  pid.c  util.c
common/include/: messages.h  msgtypes.h  network.h  pid.h  util.h
common/src/: messages.cpp  network.cpp  pid.c  pid.cpp  util.c
conf/: estimate.conf  gui.conf  joydrive.conf  nav.conf  planner.conf  ssa.conf  visiond.conf
estimate/: CMakeLists.txt
estimate/include/: estimate.h
geany/: geany.txt  geany_gui.txt  geany_nav.txt  geany_planner.txt  geany_sysid.txt  geany_vision.txt
gui/: CMakeLists.txt  Makefile  buttons.c  client.c  events.c  gui.c  makefile
gui/include/: buttons.h  client.h  events.h  gui.h
gui/src/: buttons.cpp  gui.cpp
include/: client.h  messages.h  msgtypes.h  pololu.h  server.h
joy/: CMakeLists.txt  Makefile  joy.c
joy/include/: joy.h  mainpage.h
joy/src/: joy.cpp
joy/test/: joy_test.c  joy_test.c.orig
joydrive/: CMakeLists.txt  Makefile  joydrive.c  makefile
joydrive/include/: joydrive.h
joydrive/src/: joydrive.c
kalman/: CMakeLists.txt  Makefile  kalman.c
kalman/include/: kalman.h
kalman/src/: kalman.c  kalman.cpp
labjack/: CMakeLists.txt  Makefile  README  battery_sensor.c  labjack.c  labjackusb.c  u3.c
labjack/driver/: .labjacku3.ko.cmd  .labjacku3.mod.o.cmd  .labjacku3.o.cmd  install_driver.sh  labjacku3.ko  labjacku3.mod.c  modules.order
labjack/driver/.tmp_versions/: labjacku3.mod
labjack/include/: labjack.h  u3.h
labjack/src/: depth_sensor.cpp  labjack.cpp  log_labjack.cpp  water_sensor.cpp
labjack/test/: labjack_test.c
labjackd/: CMakeLists.txt  Makefile  labjackd  labjackd.c  makefile
labjackd/include/: labjackd.h
libs/joy/: Makefile  joy.c
libs/joy/include/: joy.h
libs/joy/test/: Makefile  makefile
libs/kalman/: Makefile
libs/labjack/: README  labjackusb.c  labjackusb.h  u3.c
libs/labjack/driver/: Makefile  labjacku3.c  labjacku3.mod.c  run_driver.sh
libs/labjack/include/: labjack.h  mainpage.h
libs/labjack/test/: Makefile  labjack_test.c
libs/logframe/: changelog.txt  hashtable_itr.c  test.c
libs/logframe/include/: hashtable.h  hashtable_private.h  logframe.h
libs/microstrain/: Makefile  microstrain.c
libs/microstrain/include/: mainpage.h  microstrain.h
libs/microstrain/test/: Makefile  Makefile.tare  angle_test.c  imu_test.c  mstrain_tare.c
libs/parser/: Makefile  parser.c
libs/parser/include/: parser.h
libs/parser/test/: Makefile  parser_test.c
libs/pololu/: pololu.c
libs/serial/: Makefile
libs/serial/include/: serial.h
libs/ssa/src/: command.c  commandfile.c  commandfile.h  common.c  config.c  config.h  delay.h  diff.c  gui_utility.h  mocudatafile.c  mocudatafile.h  mysql_handler.c  mysql_handler.h  platform_types.h  readconfigfile.c  readconfigfile.h  socket.c  socket.h  ssa.h  status.c  telemfile.c  types.h  waypoints.c  waypoints.h
libs/sysid/: sysid.c
libs/sysid/include/: sysid.h
libs/sysid/test/: Makefile  test_sysid.c
libs/timing/: Makefile  timing.c
libs/timing/include/: timing.h
libs/timing/test/: Makefile  test_timing.c
libs/vision/: boost.h  buoy.c  vision.c
libs/vision/include/: strlcpy.h  vision.h
logframe/: Makefile  hashtable.c  logframe.c
logframe/include/: doxyfile  hashtable_itr.h
main_test/: cleanup  main_test.c  makefile  openpid  setupvideo  start
microstrain/: CMakeLists.txt  Makefile  makefile  microstrain.c
microstrain/include/: microstrain.h
microstrain/src/: microstrain.cpp
microstrain/test/: imu_test.c  imu_test.c.orig  makefile  makefile.tare  mstrain_tare.c
nav/: CMakeLists.txt  Makefile  makefile  nav.c
nav/include/: nav.h
nav/src/: nav.cpp
parser/: CMakeLists.txt  makefile  parser.c
parser/include/: parser.h
parser/src/: parser.c
parser/test/: makefile  parser_test.c  parser_test.c.orig
planner/: CMakeLists.txt  Makefile  log.csv  makefile  planner.c  task.c
planner/include/: planner.h  task.h
planner/src/: planner.c
pololu/: CMakeLists.txt  Makefile  makefile  pololu.c
pololu/include/: pololu.h
pololu/src/: pololu.c
pololuCalibrate/: CMakeLists.txt  Makefile  makefile  pololuCalibrate.c
pololuCalibrate/src/: pololuCalibrate.c  pololuCalibrate.cpp
serial/: CMakeLists.txt  makefile  serial.c
serial/include/: mainpage.h  serial.h
serial/src/: serial.cpp
src/common/: messages.c  network.c  pid.c  util.c
src/common/include/: messages.h  network.h  pid.h  util.h
src/estimate/: Makefile  estimate  estimate.c  startEstimate
src/estimate/include/: estimate.h
src/gui/: Makefile  buttons.c  client.c  events.c
src/gui/include/: buttons.h  gui.h
src/joydrive/: joydrive.c
src/joydrive/include/: joydrive.h
src/labjackd/: Makefile  README
src/labjackd/include/: labjackd.h
src/nav/: Makefile  makefile  nav.c  ssatelemetry.txt
src/nav/include/: nav.h
src/planner/: Makefile  makefile  planner.c
src/visiond/: Makefile  visiond.c
src/visiond/include/: visiond.h
ssa/: Makefile
ssa/src/: RobotDatFileFormat.h  command.h  conversions.h  delay.c  diff.h  gui_utility.c  logfile.c  logfile.h  platform_modes.h  status.h  telemfile.h
sysid/: CMakeLists.txt  Makefile  sysid.c
sysid/include/: sysid.h
sysid/src/: sysid.c
sysid/test/: Makefile  test_sysid  test_sysid.c
timing/: CMakeLists.txt  Makefile  timing.c  timing.geany
timing/include/: timing.h
timing/src/: timing.cpp
timing/test/: Makefile
vision/: CMakeLists.txt  Makefile  makefile  vision.c  vision.c.cvblob
vision/include/: vision.h
vision/src/: pipe.cpp  vision.cpp
visiond/: CMakeLists.txt  Makefile  makefile  setupvideo  visiond.c
visiond/include/: visiond.h
visiond/src/: visiond.c  visiond.cpp
